Fixed/Added some Bugs and Features

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <h4 class="logo">Source Code</h4>
         <h4 class="head-section">
             <button class="active-button" onclick="location.href='https://www.google.com' ">Home</button>
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            <!-- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -->
             <button class="active-button" onclick="location.href='https://www.google.com'">About</button>
-            &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            <!-- &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -->
             <button class="active-button " onclick="location.href='https://www.google.com' ">Contact</button>
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            <!-- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -->
             <button class="active-button" onclick="location.href='https://www.google.com' ">Services</button>
         </h4>
     </header>
