Fixed Some Bugs

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                 <h3>Source Code</h3>
                 <pre>
                     <code>
-                        #include<stdio.h>
-                            #include<stdlib.h>
+                            #include&lt;stdio.h&gt;
+                            #include&lt;stdlib.h&gt;
                             /*
                              Programmer : Jay kishan Kharwar
                              Date : 23/11/2023
